--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "autentique-v2-nodejs",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "API Autentique V2",
   "main": "dist/index.js",
   "repository": "https://github.com/thiagozampieri/autentique-v2-nodejs.git",
@@ -12,6 +12,7 @@
     "babel-plugin-dotenv": "^0.1.1",
     "form-data": "^3.0.0"
   },
+  "files": [ "./dist" ],
   "bin": {
     "autentique-v2-nodejs": "lib/install.js"
   },
