solve all files including in build

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "autentique-v2-nodejs",
-  "version": "1.0.5",
+  "version": "1.0.8",
   "description": "API Autentique V2",
   "main": "dist/index.js",
   "repository": "https://github.com/thiagozampieri/autentique-v2-nodejs.git",
@@ -12,7 +12,7 @@
     "babel-plugin-dotenv": "^0.1.1",
     "form-data": "^3.0.0"
   },
-  "files": [ "./dist" ],
+  "files": [ "dist", "lib" ],
   "bin": {
     "autentique-v2-nodejs": "lib/install.js"
   },
@@ -20,7 +20,8 @@
     "start": "babel-node ./src/index.js",
     "test": "babel-node ./tests/test.js",
     "build": "babel src --out-dir dist",
-    "prepublish": "npm run build"
+    "clean": "rm -rf dist"
+    
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
