--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "autentique-v2-nodejs",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "API Autentique V2",
   "main": "dist/index.js",
   "repository": "https://github.com/thiagozampieri/autentique-v2-nodejs.git",
@@ -12,7 +12,11 @@
     "babel-plugin-dotenv": "^0.1.1",
     "form-data": "^3.0.0"
   },
-  "files": [ "dist", "lib", "src/resources/*" ],
+  "files": [
+    "dist",
+    "lib",
+    "src/resources/*"
+  ],
   "bin": {
     "autentique-v2-nodejs": "lib/install.js"
   },
@@ -29,6 +33,7 @@
     "@babel/core": "^7.11.4",
     "@babel/node": "^7.10.5",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0"
   }
 }
