--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "autentique-v2-nodejs",
-  "version": "1.0.12",
+  "name": "@thiago.zampieri/autentique-v2-nodejs",
+  "version": "1.0.14",
   "description": "API Autentique V2",
   "main": "dist/index.js",
   "repository": "https://github.com/thiagozampieri/autentique-v2-nodejs.git",
   "author": "Thiago Zampieri <thiago.zampieri@gmail.com>",
   "license": "MIT",
+  "type": "commonjs",
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^1.3.4",
     "babel-plugin-dotenv": "^0.1.1",
     "form-data": "^3.0.0"
   },
